✨ enhanced task queueing model
to avoid (negative) concurrent task execution